fix: remove entrypoint script, use direct java entrypoint